--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
     },
     "content_scripts": [{
         "matches": ["<all_urls>"],
-        "js": ["js/select.js"]
+        "js": ["dist/index.js"]
     }],
     "background": {
         "scripts": [
