--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "memo-search",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Memo Search (Fake)",
   "main": "index.js",
   "dependencies": {},
@@ -10,6 +10,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.3",
     "babel-preset-env": "^1.7.0",
+    "copy-webpack-plugin": "^10.2.1",
     "css-loader": "^6.5.1",
     "file-loader": "^6.2.0",
     "vue": "^2.6.14",
