--- a/src/crx/manifest.json
+++ b/src/crx/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "name": "Memo Search",
-    "version": "0.1.1",
+    "version": "0.2.0",
     "description": "Memo Search（Fake）",
     "icons": {
         "16": "images/logo4.png",
@@ -12,15 +12,15 @@
             "19": "images/logo4.png"
         },
         "default_title": "Memo Search",
-        "default_popup": "popup.html"
+        "default_popup": "html/popup.html"
     },
     "content_scripts": [{
         "matches": ["<all_urls>"],
-        "js": ["dist/index.js"]
+        "js": ["index.js"]
     }],
     "background": {
         "scripts": [
-            "js/menus.js"
+            "menus.js"
         ]
     },
     "permissions": [
