--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "memo-search",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Memo Search (Fake)",
   "main": "index.js",
   "dependencies": {},
@@ -13,6 +13,7 @@
     "copy-webpack-plugin": "^10.2.1",
     "css-loader": "^6.5.1",
     "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1",
     "vue": "^2.6.14",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14",
