--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.2.6",
   "description": "Memo Search (Fake)",
   "main": "index.js",
-  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.8",
@@ -12,13 +11,18 @@
     "babel-preset-env": "^1.7.0",
     "copy-webpack-plugin": "^10.2.1",
     "css-loader": "^6.5.1",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-vue": "^8.3.0",
     "file-loader": "^6.2.0",
     "url-loader": "^4.1.1",
     "vue": "^2.6.14",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^5.66.0",
-    "webpack-cli": "^4.9.1"
+    "webpack": "^5.66.0"
   },
   "scripts": {
     "build": "webpack",
