--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "memo-search",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Memo Search (Fake)",
   "main": "index.js",
   "devDependencies": {
     "@babel/core": "^7.16.7",
+    "@babel/plugin-transform-runtime": "^7.16.10",
     "@babel/preset-env": "^7.16.8",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.3",
@@ -22,7 +23,8 @@
     "vue": "^2.6.14",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^5.66.0"
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.2"
   },
   "scripts": {
     "build": "webpack",
