--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "build": "webpack",
-    "watch": "webpack --watch"
+    "dev": "webpack --watch"
   },
   "repository": {
     "type": "git",
