--- a/src/crx/manifest.json
+++ b/src/crx/manifest.json
@@ -24,6 +24,7 @@
             "hot-reload.js"
         ]
     },
+    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
     "options_page": "html/options.html",
     "permissions": [
         "contextMenus",
